--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,6 @@
 services:
   - type: web
-    name: fastapi-app
-    runtime: python
-    buildCommand: |
-      apt-get update && apt-get install -y graphviz
-      pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: PORT
-        value: 10000
+    name: dag-generator
+    env: docker
+    plan: free
+    dockerfilePath: ./Dockerfile
